--- a/app/views/layouts/_landing_navbar.html.erb
+++ b/app/views/layouts/_landing_navbar.html.erb
@@ -4,7 +4,7 @@
       <div class="flex items-center">
         <a href="/" class="flex items-center space-x-2">
           <span class="text-2xl font-bold font-heading tracking-tighter text-text-primary">
-            🚀 Spylitic
+            Spylitic
           </span>
         </a>
       </div>
